# multitrack-audio-player

./: CMakeLists.txt  index.html  main.cpp  makefile.bat
jackspvars/: pvarslib.cpp  pvarslib.hpp
static/: index.js  indexold.js  indexold2.js
views/: downloads.html  downloads_extra.html  home.html  home_extra.html  login.html  register.html
